# Macedonian-Notion-Updates

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add_vocab_to_notion.py  assign_frequency_bands.py  audio_sources.yaml  build_dictionary.py  cli.py  clip_audio.py  core_features_list.md  download_corpora.py  enrich_csv.py  fetch_audio.py  fetch_audio_v1.py  notion_fetch.py  play_audio.ipynb  push_to_notion.py  pyproject.toml  run_pipeline.py  update_notion_schema.py  validate_audio.py  verify_audio.py
.github/workflows/: ci.yml
audio/: attribution.csv  audio_gaps_20260701_122021.csv  audio_manifest_20260701_122325.csv  clip_dictionary_20260701_210430.csv  clip_dictionary_20260701_211158.csv  clip_results_20260701_194809.csv  common_voice_word_index.csv  fleurs_mk_word_index.csv  lingua_libre_mk_index.csv
core/: audio_io.py  files.py  romanize.py
docs/: architecture.md  data-sources.md  pipeline.md  setup.md  usage.md
sources/: source_manifest.csv
sources/dictionaries/: mk_basic_lexicon.txt  mk_wiktionary_lexicon.txt
sources/frequency_lists/: SOURCE_INFO.csv
src/builders/: apply_bands.py  frequency.py
src/core/: __init__.py  files.py  notion_client.py
src/notion/: create.py  fetch.py  push.py
src/pipeline/: audio_resolve.py  clip_extract.py  deduplicate.py  enrich.py  validate.py
tests/: test_audio_io.py  test_dictionary.py  test_romanize.py
